--- a/chat/templates/chat.html
+++ b/chat/templates/chat.html
@@ -1,8 +1,17 @@
 <html>
     <head>
         <title>Chat</title>
+        <style>
+            input { display: block; }
+            ul { list-style: none; }
+        </style>
     </head>
     <body>
-        Let's chat 
+        <ul id="messages"></ul>
+        <form id="chatbox">
+            <textarea></textarea>
+            <input type="submit" value="Send"/>
+        </form>
+        
     </body>
 </html>
